Added icons to launch screen and main viewController

--- a/StartPlast/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/StartPlast/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,9 +15,72 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oCS-0G-XgE">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4lq-VG-TQp" userLabel="LoginButtonContainer">
+                                        <rect key="frame" x="0.0" y="500.5" width="375" height="166.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3m-lB-FDc" userLabel="InfoContainer">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="500.5"/>
+                                        <subviews>
+                                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginIcon" translatesAutoresizingMaskIntoConstraints="NO" id="GgZ-iE-wKC">
+                                                <rect key="frame" x="73.5" y="125" width="228" height="325"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="GgZ-iE-wKC" secondAttribute="height" multiplier="7:10" id="dXF-3v-sXE"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 3-2" translatesAutoresizingMaskIntoConstraints="NO" id="mMH-H3-scT">
+                                                <rect key="frame" x="73.5" y="125" width="228" height="231"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="mMH-H3-scT" secondAttribute="height" multiplier="196:199" id="HOl-wz-wOY"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Plast " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3XD-by-zXh">
+                                                <rect key="frame" x="126.5" y="72" width="122" height="29"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                <color key="textColor" red="0.1529411765" green="0.1529411765" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="mMH-H3-scT" firstAttribute="top" secondItem="GgZ-iE-wKC" secondAttribute="top" id="1PR-Dd-lno"/>
+                                            <constraint firstItem="3XD-by-zXh" firstAttribute="centerX" secondItem="Z3m-lB-FDc" secondAttribute="centerX" id="D7e-DQ-PFy"/>
+                                            <constraint firstItem="GgZ-iE-wKC" firstAttribute="centerY" secondItem="Z3m-lB-FDc" secondAttribute="centerY" multiplier="1.15" id="WAe-kV-HgD"/>
+                                            <constraint firstItem="GgZ-iE-wKC" firstAttribute="height" secondItem="Z3m-lB-FDc" secondAttribute="height" multiplier="0.65" id="Y4O-ub-jkv"/>
+                                            <constraint firstItem="mMH-H3-scT" firstAttribute="leading" secondItem="GgZ-iE-wKC" secondAttribute="leading" id="ivm-s9-7bG"/>
+                                            <constraint firstItem="mMH-H3-scT" firstAttribute="trailing" secondItem="GgZ-iE-wKC" secondAttribute="trailing" id="kQR-jU-DYS"/>
+                                            <constraint firstItem="GgZ-iE-wKC" firstAttribute="top" secondItem="3XD-by-zXh" secondAttribute="bottom" constant="24" id="t4H-Iw-xcs"/>
+                                            <constraint firstItem="GgZ-iE-wKC" firstAttribute="centerX" secondItem="Z3m-lB-FDc" secondAttribute="centerX" id="vVb-wO-SWt"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="Z3m-lB-FDc" firstAttribute="top" secondItem="oCS-0G-XgE" secondAttribute="top" id="0WD-se-Qhi"/>
+                                    <constraint firstItem="4lq-VG-TQp" firstAttribute="leading" secondItem="3vl-wE-kvY" secondAttribute="leading" id="6Ad-Bq-MQx"/>
+                                    <constraint firstItem="3vl-wE-kvY" firstAttribute="trailing" secondItem="Z3m-lB-FDc" secondAttribute="trailing" id="CyT-eI-IfY"/>
+                                    <constraint firstItem="4lq-VG-TQp" firstAttribute="top" secondItem="Z3m-lB-FDc" secondAttribute="bottom" id="Pjs-iP-RHb"/>
+                                    <constraint firstItem="Z3m-lB-FDc" firstAttribute="leading" secondItem="3vl-wE-kvY" secondAttribute="leading" id="dXZ-6U-kbL"/>
+                                    <constraint firstItem="3vl-wE-kvY" firstAttribute="trailing" secondItem="4lq-VG-TQp" secondAttribute="trailing" id="hLg-Ef-RJV"/>
+                                    <constraint firstItem="4lq-VG-TQp" firstAttribute="height" secondItem="oCS-0G-XgE" secondAttribute="height" multiplier="0.25" id="pPl-7u-H2S"/>
+                                    <constraint firstItem="3vl-wE-kvY" firstAttribute="bottom" secondItem="4lq-VG-TQp" secondAttribute="bottom" id="wsL-xv-PlW"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="3vl-wE-kvY"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="oCS-0G-XgE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5yh-Gb-uqO"/>
+                            <constraint firstItem="oCS-0G-XgE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EDc-a1-X0J"/>
+                            <constraint firstItem="oCS-0G-XgE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="KG3-4l-tgq"/>
+                            <constraint firstItem="oCS-0G-XgE" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="yV2-gU-l38"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -26,4 +89,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Group 3-2" width="392" height="398"/>
+        <image name="loginIcon" width="392" height="560"/>
+    </resources>
 </document>
