--- a/StartPlast/Storyboards/Base.lproj/Main.storyboard
+++ b/StartPlast/Storyboards/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zsb-9N-1DM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zsb-9N-1DM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -84,7 +84,7 @@
                         <viewLayoutGuide key="safeArea" id="byq-uY-jb7"/>
                     </view>
                     <connections>
-                        <segue destination="yyc-T3-Pvy" kind="showDetail" identifier="LoginIdentifier" animates="NO" id="hGn-Wz-tVH"/>
+                        <segue destination="yyc-T3-Pvy" kind="showDetail" identifier="LoginIdentifier" customClass="FadeSegue" customModule="StartPlast" customModuleProvider="target" animates="NO" id="hGn-Wz-tVH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2cT-3A-3bU" userLabel="First Responder" sceneMemberID="firstResponder"/>
