--- a/StartPlast/Storyboards/Base.lproj/Main.storyboard
+++ b/StartPlast/Storyboards/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="500.5"/>
                                         <subviews>
                                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginIcon" translatesAutoresizingMaskIntoConstraints="NO" id="9Nr-wH-veJ">
-                                                <rect key="frame" x="73.5" y="125" width="228" height="325"/>
+                                                <rect key="frame" x="73.5" y="125" width="228.00000000000011" height="325"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="9Nr-wH-veJ" secondAttribute="height" multiplier="7:10" id="8YF-Lm-EYp"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Group 3-2" translatesAutoresizingMaskIntoConstraints="NO" id="pVf-mc-ceX">
-                                                <rect key="frame" x="73.5" y="125" width="228" height="231"/>
+                                                <rect key="frame" x="73.5" y="125" width="228.00000000000011" height="231"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="pVf-mc-ceX" secondAttribute="height" multiplier="196:199" id="X5H-tl-ii0"/>
                                                 </constraints>
@@ -84,7 +84,7 @@
                         <viewLayoutGuide key="safeArea" id="byq-uY-jb7"/>
                     </view>
                     <connections>
-                        <segue destination="yyc-T3-Pvy" kind="showDetail" identifier="LoginIdentifier" customClass="FadeSegue" customModule="StartPlast" customModuleProvider="target" animates="NO" id="hGn-Wz-tVH"/>
+                        <segue destination="yyc-T3-Pvy" kind="showDetail" identifier="LoginIdentifier" animates="NO" id="hGn-Wz-tVH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2cT-3A-3bU" userLabel="First Responder" sceneMemberID="firstResponder"/>
