--- a/StartPlast/Storyboards/CarouselStoryboard.storyboard
+++ b/StartPlast/Storyboards/CarouselStoryboard.storyboard
@@ -154,7 +154,7 @@
                                                                 <constraint firstAttribute="width" constant="30" id="SjJ-jf-jZ8"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wSX-B0-UBc">
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wSX-B0-UBc">
                                                             <rect key="frame" x="0.0" y="57.666666666666671" width="289" height="182.66666666666663"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="752" text="СКОБ Привіт!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dey-fg-U1Q">
